syntax = "proto3";

package apigrps;

option go_package = "github.com/Part001-R/grpcs/pkg/api";


service iwe {
    rpc SaveMessage (MessageRequest) returns (MessageResponse) {} 
}

message MessageRequest{
    string typeMessage = 1; // I, W, E
    string nameProject = 2;
    string locationEvent = 3; 
    string bodyMessage = 4; 
}

message MessageResponse{
    string status = 1;
}